syntax = "proto3";

option csharp_namespace = "GrpcMain.Device";
package GrpcMain.Device;
import "google/protobuf/empty.proto";
import "Common/CommonResponse.proto";
service DeviceService {

    
    //发送命令
    rpc SendCMD(DTODefine.Request_SendCMD)
        returns (GrpcMain.Common.CommonResponse);

    //删除设备
    rpc DeletDevice(DTODefine.Request_DeletDevice)
        returns (GrpcMain.Common.CommonResponse);

    //修改设备信息
    rpc UpdateDeviceInfo(DTODefine.Request_UpdateDeviceInfo)
        returns (GrpcMain.Common.CommonResponse);
    //获取全部设备状态
    rpc GetAllDeviceStatus(DTODefine.Request_GetAllDeviceStatus)
        returns (DTODefine.Response_GetAllDeviceStatus);

}


message DTODefine
{  
    message Device{
        int64 Id=1;
        string Name=2;
        int64 DeviceTypeId=3;
        optional string LatestData=4;
        optional int32 Status=5;
        optional string LocationStr=6;
        //用户设备的分组 随用户发生变化 不属于设备基础信息的一部分
        optional int64 GroupId=7;
       
    }

    message Request_SendCMD{
        repeated int64 Dvids=1;
        string Cmd=2;
    }   


    message Request_DeletDevice{
        repeated int64 Dvids=1;
        optional string Reason=2;
    }

    message Request_UpdateDeviceInfo{
        repeated Device Devices=1;
    }
    
    message Request_GetAllDeviceStatus{
        optional int64 Cursor=1;

    }
    message Response_GetAllDeviceStatus{
        //0则无后续数据
        int64 Cursor=1; 
        repeated int64 Dvids=2;
        repeated int32 Status=3;
    }
}
 
